--- a/global.css
+++ b/global.css
@@ -42,8 +42,22 @@ h1, h2, h3 {
   font: inherit;
 }
 
+img {
+  max-width: 100%; /*respeita em 100% o tamanho da imagem dentro da div que está*/
+  height: auto;
+  object-fit: cover;
+}
+
+
 .container {
-  width: 1280px;
+  max-width: 1280px;
   padding-inline: 32px;
   margin-inline: auto;
+}
+
+
+main {
+  margin-top: 40px;
+
+
 }
