--- a/utility.css
+++ b/utility.css
@@ -5,3 +5,11 @@
 .grid-flow-col {
   grid-auto-flow: column;
 }
+
+.grid-cols-2 {
+  grid-template-columns: 1fr 1fr;
+}
+
+.gap-16 {
+  gap: 16px;
+}
