updating section main featured

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url(global.css);
+@import url(styles/global.css);
 
-@import url(utility.css);
+@import url(styles/utility.css);
 
-@import url(header.css);
+@import url(styles/header.css);
 
-@import url(section.css);
+@import url(styles/section.css);
 
