--- a/styles/section.css
+++ b/styles/section.css
@@ -1,7 +1,16 @@
 #featured {
-  grid-area: featured;
+  div:first-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Faz a imagem preencher toda a área sem distorcer */
+    display: block;
+  }
+
+
   img {
+    height: 100%
     object-fit: cover; /*pra img nao esticar*/ 
     border-radius: 4px;
   }
 }
+
