--- a/styles/featured.css
+++ b/styles/featured.css
@@ -1,5 +1,4 @@
 #featured {
-
   div:first-child img {
     width: 100%;
     height: 100%;
@@ -31,5 +30,16 @@
         transparent 0%,
         #020617 100%)
     }
+
+    figcaption {
+      position: absolute;
+      bottom: 0;
+      padding: 24px;
+
+      h2 {
+        margin-top: 8px;
+      }
+      }
+    };
   }
 
