--- a/styles/section.css
+++ b/styles/section.css
@@ -36,6 +36,11 @@
       bottom: 0;
       padding: 24px;
 
+      &:has(.text-lg) {
+        padding: 12px;
+      }
+
+
       h2 {
         margin-top: 8px;
       }
