structuring the weekly section

--- a/styles/section.css
+++ b/styles/section.css
@@ -37,14 +37,12 @@
       padding: 24px;
 
       &:has(.text-lg) {
-        padding: 12px;
-      }
+        padding: 12px;}
 
 
       h2 {
-        margin-top: 8px;
-      }
-      }
-    };
-  }
+        margin-top: 8px;}
+    }
+  };
+  
 
