--- a/styles/section.css
+++ b/styles/section.css
@@ -1,3 +1,26 @@
+section header {
+  border-top: 1px solid var(--stroke-color);
+  padding-block: 12px 24px;
+  font: var(--text-span);
+
+  a {
+    justify-self: end;
+    align-items: center;
+    gap: 8px;
+
+    span {
+      background-image: url(../assets/icons/ArrowW.svg);
+      width: 16px;
+      height: 16px;
+    }
+
+    &:hover span {
+      background-image: url(../assets/icons/arrowb.svg);
+    }
+  }
+}
+
+
 #featured {
   div:first-child img {
     width: 100%;
@@ -13,7 +36,7 @@
     object-fit: cover; /*pra img nao esticar*/ 
     border-radius: 4px;
   }
-}
+
 
   .card {
     position: relative;
@@ -45,4 +68,37 @@
     }
   };
   
+}
 
+
+#weekly {
+
+  &>div {
+    grid-template-columns: repeat(4, 292px);
+  }
+
+  img {
+    height: 160px;
+
+  }
+
+  figure {
+    position: relative;
+
+    .content-tag {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+    }
+
+    p {
+      margin-top: 8px;
+      font-weight: 800;
+    }
+
+
+  }
+
+
+
+}
