--- a/styles/section.css
+++ b/styles/section.css
@@ -22,6 +22,8 @@ section header {
 
 
 #featured {
+  grid-area: featured;
+
   div:first-child img {
     width: 100%;
     height: 100%;
@@ -72,6 +74,7 @@ section header {
 
 
 #weekly {
+  grid-area: weekly;
 
   &>div {
     grid-template-columns: repeat(4, 292px);
@@ -99,6 +102,41 @@ section header {
 
   }
 
+
+
+}
+
+
+#ai {
+  grid-area: ai;
+  img {
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover; 
+  }
+
+  h3 {
+    margin-block: 8px 4px;
+  }
+
+  aside {
+    grid-area: aside;
+  }
+}
+
+
+#more {
+  margin-top: 32px;
+  
+  h3 {
+  margin-top: 8px;
+  }
+
+  img {
+  width: 72px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
 
 
 }
